--- a/research.html
+++ b/research.html
@@ -20,20 +20,20 @@
     <nav>
         <ul>
             <div lang="ja">
-                <li><a href="index_v1_8.html#overview">小川洋平</a></li>
-                <li><a href="index_v1_8.html#current">現在の研究</a></li>
+                <li><a href="index.html#overview">小川洋平</a></li>
+                <li><a href="index.html#current">現在の研究</a></li>
                 <li><a href="research.html">これまでの研究成果</a></li>
-                <li><a href="index_v1_8.html#publications">業績</a></li>
-                <li><a href="index_v1_8.html#career">経歴・職歴</a></li>
-                <li><a href="index_v1_8.html#contact">連絡先</a></li>
+                <li><a href="index.html#publications">業績</a></li>
+                <li><a href="index.html#career">経歴・職歴</a></li>
+                <li><a href="index.html#contact">連絡先</a></li>
             </div>
             <div lang="en">
-                <li><a href="index_v1_8.html#overview">Yohey Ogawa</a></li>
-                <li><a href="index_v1_8.html#current">Current Research</a></li>
+                <li><a href="index.html#overview">Yohey Ogawa</a></li>
+                <li><a href="index.html#current">Current Research</a></li>
                 <li><a href="research.html">Previous Research</a></li>
-                <li><a href="index_v1_8.html#publications">Publications</a></li>
-                <li><a href="index_v1_8.html#career">Career</a></li>
-                <li><a href="index_v1_8.html#contact">Contact</a></li>
+                <li><a href="index.html#publications">Publications</a></li>
+                <li><a href="index.html#career">Career</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </div>
         </ul>
     </nav>
