--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ http://localhost:8000/index_v1_6.html
         </ul>
         <!-- 更新履歴のプレースホルダー -->
         <div class="update-history">
-            <p>-----------------</p>
-            <p lang="ja">更新履歴</p>
-            <p lang="en" style="display: none;">Update History</p>
+            <p style="text-indent: 0em;">------------------------</p>
+            <p lang="ja" style="text-indent: 0em;">更新履歴</p>
+            <p lang="en" style="display: none;text-indent: 0em;">Update History</p>
             <ul id="update-list"></ul>
         </div>
     </nav>
