--- a/index.html
+++ b/index.html
@@ -8,28 +8,24 @@
     <!-- 外部CSSファイルの読み込み -->
     <link rel="stylesheet" href="style_v2.css">
 
-    <style>
-        /* Add styles for mobile navigation */
-        @media (max-width: 768px) {
-            nav {
-                display: none;
-            }
-            nav.active {
-                display: block;
-            }
-        }
-    </style>
 </head>
+
 <body>
 
     <div class="language-switch">
         <a href="#" onclick="switchLanguage('ja')">日本語</a>
         <a href="#" onclick="switchLanguage('en')">English</a>
+        <!-- mobile-header を直下に移動 -->
+        <div class="mobile-header">
+            <div lang="ja">
+                <a href="#" onclick="toggleNav()">目次</a>
+            </div>
+            <div lang="en" style="display: none;">
+                <a href="#" onclick="toggleNav()">menu</a>
+            </div>
+        </div>
     </div>
 
-    <div class="mobile-header">
-        <a href="#" onclick="toggleNav()">メニューを表示</a>
-    </div>
 
     <nav>
         <ul>
