--- a/research.html
+++ b/research.html
@@ -15,6 +15,15 @@
     <div class="language-switch">
         <a href="#" onclick="switchLanguage('ja')">日本語</a>
         <a href="#" onclick="switchLanguage('en')">English</a>
+        <!-- mobile-header を直下に移動 -->
+        <div class="mobile-header">
+            <div lang="ja">
+                <a href="#" onclick="toggleNav()">目次</a>
+            </div>
+            <div lang="en" style="display: none;">
+                <a href="#" onclick="toggleNav()">Menu</a>
+            </div>
+        </div>
     </div>
 
     <nav>
