--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 小川洋平 Yohey Ogawa</title>
+    <title> Yohei Ogawa (小川　洋平)</title>
 
     <!-- 外部CSSファイルの読み込み -->
     <link rel="stylesheet" href="style_v2.css">
@@ -62,7 +62,7 @@
                 <!-- プロフィール画像とタイトルを横並びに配置 -->
                 <div class="header-content">
                     <img src="./media_file/photo/Yohei_Ogawa_cherry.jpeg" alt="プロフィール画像" class="profile-image">
-                    <h1>小川洋平 Yohey Ogawa</h1>
+                    <h1>小川 洋平 (Yohei Ogawa)</h1>
                 </div>
                 <!--<p class="sub-title">生物科学研究者</p>-->
             </header>
@@ -327,7 +327,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 小川洋平 Yohey Ogawa All Rights Reserved.</p>
+        <p>&copy; 2024 小川 洋平 Yohei Ogawa All Rights Reserved.</p>
     </footer>
 
     <!-- java scriptの読み込み -->
