--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>研究成果</title>
+    <title>Research (研究成果)</title>
 
     <!-- 外部CSSファイルの読み込み -->
     <link rel="stylesheet" href="style_v2.css">
@@ -147,7 +147,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 小川洋平 Yohey Ogawa All Rights Reserved.</p>
+        <p>&copy; 2024 小川 洋平 Yohei Ogawa All Rights Reserved.</p>
     </footer>
 
     <!-- java scriptの読み込み -->
