yohey to yohei 2

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#contact">連絡先</a></li>
             </div>
             <div lang="en">
-                <li><a href="#overview">Yohey Ogawa</a></li>
+                <li><a href="#overview">Yohei Ogawa</a></li>
                 <li><a href="#current">Current Research</a></li>
                 <li><a href="research.html">Previous Research</a></li>
                 <li><a href="#publications">Publications</a></li>
