--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
                 <li><a href="index.html#contact">連絡先</a></li>
             </div>
             <div lang="en">
-                <li><a href="index.html#overview">Yohey Ogawa</a></li>
+                <li><a href="index.html#overview">Yohei Ogawa</a></li>
                 <li><a href="index.html#current">Current Research</a></li>
                 <li><a href="research.html">Previous Research</a></li>
                 <li><a href="index.html#publications">Publications</a></li>
