Revised future research goals and central hypothesis

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Yohei Ogawa (小川　洋平)</title>
+    <title> Yohey Ogawa (小川　洋平)</title>
 
     <!-- 外部CSSファイルの読み込み -->
     <link rel="stylesheet" href="style_v2.css">
@@ -70,13 +70,17 @@
             <div lang="ja">
 
                 <h2 style="display: inline-block; margin-right: 20px;">研究目標</h2>
-                <p style="display: inline-block;font-size:x-large; margin-top: 2em; margin-bottom: 2em;"><strong style="border: 1px solid; padding: 5px;">遺伝子転写システムを種間比較し、細胞の進化的変遷や起源を解明する</strong></p>
-                <p>ヒトゲノムのうち遺伝子をコードする領域はたったの数％です。また遺伝子数は多くても３万遺伝子ほどしかありません。これらの遺伝子を使って、例えばヒトの脳においては、約９００億個の神経細胞が作られ、神経細胞は数百～数千種類のサブタイプを構成します。このように多様な細胞を形成するためには、それぞれの遺伝子が適切なタイミングかつ特定の場所にて使用（遺伝子発現）される必要があります。個々の遺伝子の発現は、ヒトやマウスにおいては約３千の転写関連因子が織りなす転写調節システムにより制御されます。また動物においては、体の構造が単純か複雑かに関わらず、遺伝子の数は大まかに数万程度で、桁が同じです。つまり転写ネットワークの複雑化により、それぞれの生物にユニークな形質が生み出されます。進化の過程では、それぞれの遺伝子が機能を失ったり獲得したりするとともに、遺伝子の転写調節が変化していると分かってきました。それぞれの生物の進化過程で転写ネットワークがどのように変化するか、詳細の解明はまだ始まったばかりです。</p>
-                <p>私はなかでも特に、哺乳類ではない脊椎動物において、細胞のユニークな機能やアイデンティティを規定する転写システムの解析を志しています。さらに哺乳類との種間比較を行ない、転写システムの進化的変遷や起源の解明を目指しています。また将来的には、遺伝子工学を用いてヒトの細胞に新たな機能を付与することにより、医学に貢献します。</p>
+                <p style="display: inline-block;font-size:x-large; margin-top: 2em; margin-bottom: 2em;"><strong style="border: 1px solid; padding: 5px;">ゲノムの非コード領域に着目した生物種間比較を行い、細胞の進化的変遷や起源を解明する</strong></p>
+                <p>ヒトゲノムのうち遺伝子をコードする領域はたったの数％です。また、ヒトの遺伝子数は多くても３万遺伝子ほどしかありません。これらの遺伝子を使って、例えばヒトの脳においては、約９００億個の神経細胞が作られ、神経細胞は数百～数千種類のサブタイプを構成します。このように多様な細胞を形成するためには、それぞれの遺伝子が適切なタイミングかつ特定の場所にて使用（遺伝子発現）される必要があります。個々の遺伝子の発現は、ヒトにおいては約３千の転写関連因子が織りなす転写調節システムにより制御されます。また他の動物においても、体の構造が単純か複雑かに関わらず、遺伝子の数は大まかに数万程度で、桁が同じです。つまり転写ネットワークの複雑化により、それぞれの生物にユニークな形質が生み出されます。進化の過程では、それぞれの遺伝子が機能を失ったり獲得したりするとともに、遺伝子の転写調節領域、つまりゲノムの非コード領域が変化していると分かってきました。それぞれの生物の進化過程で転写ネットワークがどのように変化するか、その多様性と共通性の詳細の解明はまだ始まったばかりです。</p>
+                <p>私はなかでも特に、多岐に及ぶ脊椎動物において、細胞のユニークな機能やアイデンティティを規定する転写システムの解析を志しています。さらに種間比較を行ない、転写システムの進化的変遷や起源の解明を目指しています。また将来的には、遺伝子工学を用いてヒトの細胞に新たな遺伝子発現調節モジュールを付与することにより、生物工学的アプローチも試みます。</p>
                 <h2>中心仮説</h2>
-                <h3><strong style="padding: 5px;">転写システムは転写調節因子の結合パターンとして表現できる</strong></h3>
-                <p>真核生物の転写調節因子はゲノム中の特定の塩基配列を認識して結合します。その認識配列には柔軟性があり、認識配列パターンの総称は転写因子結合モチーフ（例えばホメオドメインモチーフ）と呼ばれます。複数の転写因子が転写因子モチーフを介してDNA近傍に集まることで、機能的な遺伝子調節領域（シス調節領域）を形成します。シス調節領域により個々の遺伝子の転写が促進または抑制され、結果として細胞のアイデンティティや細胞機能が備わります。このような転写因子の結合配列の機能的な組み合わせを、私たちはシス調節コードと呼んでいます。シス調節コードの保存性の種間比較を試みており、塩基配列の保存性によらない、長い時間スケール（数億年以上）に及ぶ細胞のアイデンティティや機能の種間比較を目指します。</p>
-            </div>
+                <h3><strong style="padding: 5px;">転写システムは転写調節因子のDNA結合パターンとして表現できる</strong></h3>
+                <p>真核生物の転写調節因子は、ゲノム中に存在する約10塩基ほどの特定の配列パターンを認識して結合します。その認識配列には柔軟性があり、認識配列パターンの総称は転写因子結合モチーフ（例えばホメオドメインモチーフ）と呼ばれます。複数の転写因子が転写因子モチーフを介してDNA近傍に集まることで、機能的な遺伝子調節領域（シス調節領域）を形成します。
+                    シス調節領域により個々の遺伝子の転写が促進または抑制され、結果として細胞のアイデンティティや細胞機能が備わります。このような転写因子の結合配列の機能的な組み合わせを、私たちはシス調節コードと呼んでいます。
+                    </p>
+                <p>シス調節コードは、転写因子の組み合わせによって規定されるため、必ずしも塩基配列の保存性に依存しません。そのため、中立進化によって塩基配列が広範に変化した遠縁な生物間であっても比較が可能であると期待できます。
+                    私は、このシス調節コードの種間における保存性を探索し、塩基配列の保存性に依存しない、数億年以上の長い進化的時間スケールにわたる細胞のアイデンティティや機能の比較を目指します。</p>
+                </div>
 
             <div lang="en" style="display: none;">
                 <h2 style="display: inline-block; margin-right: 20px;">Research Goals</h2>
