start job in NIG

--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
                 <h2>業績（抜粋）</h2>
                 <ol>
                     <li style="margin-top: 10px;">
+                        Y. Liu, E. C. Hurley, <span style="color: blue;"><b>Y. Ogawa</b></span>, M. Gause, M. B. Toomey, C. A. Myers, J. C. Corbo, 
+                        <a href="https://doi.org/10.1016/j.cub.2025.02.040">Avian photoreceptor homologies and the origin of double cones.</a>
+                        <i><b>Curr. Biol.</b></i> 35, 2215-2227.e6 (2025).
+                    </li>
+                    <li style="margin-top: 10px;">
                         <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, C. A. Myers, A. Morshedian, G. L. Fain, A. P. Sampath, J. C. Corbo, 
                         <a href="https://doi.org/10.1101/2024.11.13.623372"> Conservation of cis-regulatory codes over half a billion years of evolution. </a> 
                         <b><i>bioRxiv</i></b> 2024.11.13.623372 (2024).
@@ -197,6 +202,11 @@
                 <h2>Publications</h2>
                 <ol>
                     <li style="margin-top: 10px;">
+                        Y. Liu, E. C. Hurley, <span style="color: blue;"><b>Y. Ogawa</b></span>, M. Gause, M. B. Toomey, C. A. Myers, J. C. Corbo, 
+                        <a href="https://doi.org/10.1016/j.cub.2025.02.040">Avian photoreceptor homologies and the origin of double cones.</a>
+                        <i><b>Curr. Biol.</b></i> 35, 2215-2227.e6 (2025).
+                    </li>
+                    <li style="margin-top: 10px;">
                         <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, C. A. Myers, A. Morshedian, G. L. Fain, A. P. Sampath, J. C. Corbo, 
                         <a href="https://doi.org/10.1101/2024.11.13.623372"> Conservation of cis-regulatory codes over half a billion years of evolution. </a> 
                         <b><i>bioRxiv</i></b> 2024.11.13.623372 (2024).
@@ -240,7 +250,10 @@
                 <h2>経歴・職歴</h2>
                 <ul>
                     <li>
-                        2023年9月 - 現在 Washington University School of Medicine, Pathology and Immunology, Staff Scientist 
+                        2025年5月 - 現在 国立遺伝学研究所, 分子生命史研究室, 特任研究員
+                    </li>
+                    <li>
+                        2023年9月 - 2025年4月 Washington University School of Medicine, Pathology and Immunology, Staff Scientist 
                     </li>
                     <li>
                         2018年9月 - 2023年8月 Washington University School of Medicine, Pathology and Immunology, Postdoctoral Research Associate 
@@ -267,12 +280,17 @@
                 <h2>Career</h2>
                 <ul>
                     <li>
-                        2023 Sept-Present, <b>Staff Scientist</b><br>
+                        2025 May-Present, <b>Postdoctoral Fellow</b><br>
+                        National Institue of Genetics, Molecular Life History Laboratory, Mishima, Japan
+                    </li>
+                    <li style="margin-top: 0.5em;">
+                        2023 Sept-2025 Apr, <b>Staff Scientist</b><br>
                         Washington University School of Medicine, Department of Pathology and Immunology, St. Louis, USA
                     </li>
                     <li style="margin-top: 0.5em;">
                         2018 Sept-2023 Aug, <b>Postdoctoral Research Associate</b><br>
-                        Washington University School of Medicine, Department of Pathology and Immunology, St. Louis, USA</li>
+                        Washington University School of Medicine, Department of Pathology and Immunology, St. Louis, USA
+                    </li>
                     <li style="margin-top: 0.5em;">
                         2018 Apr-Aug, <b>Postdoctoral Fellow</b><br>
                         University of Tokyo, Department of Biological Sciences, Tokyo, JAPAN
