--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Yohey Ogawa (小川　洋平)</title>
+    <title> Yohey Ogawa (小川 洋平)</title>
 
     <!-- 外部CSSファイルの読み込み -->
     <link rel="stylesheet" href="style_v2.css">
@@ -318,7 +318,7 @@
                 <ul>
                     <li>X: <a href="https://x.com/YoheyOgawa" target="_blank">@YoheyOgawa</a></li>
                     <li>BlueSky: <a href="https://bsky.app/profile/yohey-ogawa.bsky.social" target="_blank">bsky.app/profile/yohey-ogawa.bsky.social</a></li>
-                    <li>Email: <span class="email">yoheiogawa(アットマーク)wustl.edu</span></li>
+                    <li>Email: <span class="email">yohei.ogawa(アットマーク)nig.ac.jp</span></li>
                 </ul>
             </div>
             <div lang="en" style="display: none;">
@@ -327,7 +327,7 @@
                 <ul>
                     <li>X: <a href="https://x.com/YoheyOgawa" target="_blank">@YoheyOgawa</a></li>
                     <li>BlueSky: <a href="https://bsky.app/profile/yohey-ogawa.bsky.social" target="_blank">bsky.app/profile/yohey-ogawa.bsky.social</a></li>
-                    <li>Email: <span class="email">yoheiogawa(アットマーク)wustl.edu</span></li>
+                    <li>Email: <span class="email">yohei.ogawa(アットマーク)nig.ac.jp</span></li>
                 </ul>
             </div>
         </section>
