--- a/research.html
+++ b/research.html
@@ -33,6 +33,7 @@
                 <li><a href="index.html#overview">小川洋平</a></li>
                 <li><a href="index.html#current">現在の研究</a></li>
                 <li><a href="research.html">これまでの研究成果</a></li>
+                <li><a href="futureresearch.html">独立してからの研究</a></li>
                 <li><a href="index.html#publications">業績</a></li>
                 <li><a href="index.html#career">経歴・職歴</a></li>
                 <li><a href="index.html#contact">連絡先</a></li>
@@ -41,6 +42,7 @@
                 <li><a href="index.html#overview">Yohei Ogawa</a></li>
                 <li><a href="index.html#current">Current Research</a></li>
                 <li><a href="research.html">Previous Research</a></li>
+                <li><a href="futureresearch.html">Future Research as Independent Researcher</a></li>
                 <li><a href="index.html#publications">Publications</a></li>
                 <li><a href="index.html#career">Career</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
