NIG Research Themes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Yohey Ogawa (小川 洋平)</title>
+    <title> Yohey Ogawa (小川 洋平) </title>
 
     <!-- 外部CSSファイルの読み込み -->
     <link rel="stylesheet" href="style_v2.css">
@@ -74,7 +74,7 @@
             <div lang="ja">
                <h2>研究テーマ</h2>
                <ul>
-                    <li><b>トランスポゾンの同定方法の開発と種間比較</b></li>
+                    <li><b>トランスポゾンなどのリピート配列の同定とその種間比較</b></li>
                     <li><b>シングルセルATAC-seqデータを用いた視細胞タイプの種間比較解析(Joseph Corbo博士との共同研究)</b></li>
                 </ul>
 
@@ -82,7 +82,7 @@
             <div lang="en">
                 <h2>Research Themes</h2>
                  <ul>
-                    <li><b>Development of methods for transposon identification and interspecies comparison</b></li>
+                    <li><b>Interspecies comparison of interspersed repeats and simple repeats (in collaboration with Dr. Shigehiro Kuraku)</b></li>
                     <li><b>Comparative analysis of photoreceptor cell types using single-cell ATAC-seq data (in collaboration with Dr. Joseph Corbo)</b></li>
                 </ul>
              </div>
@@ -148,7 +148,7 @@
                 </ol>
             </div>
             <div lang="en">
-                <h2>Publications</h2>
+                <h2>Selected Publications</h2>
                 <ol>
                     <li style="margin-top: 10px;">
                         Y. Liu, E. C. Hurley, <span style="color: blue;"><b>Y. Ogawa</b></span>, M. Gause, M. B. Toomey, C. A. Myers, J. C. Corbo, 
