--- a/index.html
+++ b/index.html
@@ -199,7 +199,10 @@
                 <h2>経歴・職歴</h2>
                 <ul>
                     <li>
-                        2025年5月 - 現在 国立遺伝学研究所, 分子生命史研究室, 特任研究員
+                        2025年11月 - 現在 国立遺伝学研究所, 分子生命史研究室, 特任助教
+                    </li>
+                    <li>
+                        2025年5月 - 2025年10月 国立遺伝学研究所, 分子生命史研究室, 特任研究員
                     </li>
                     <li>
                         2023年9月 - 2025年4月 Washington University School of Medicine, Pathology and Immunology, Staff Scientist 
