--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div lang="en">
                 <li><a href="#overview">Yohei Ogawa</a></li>
                 <li><a href="#current">Current Research</a></li>
-                <li><a href="research.html">Previous Research</a></li>
+                <li><a href="research.html?lang=en">Previous Research</a></li>
                 <li><a href="futureresearch.html">Future Research as Independent Researcher</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#career">Career</a></li>
@@ -95,20 +95,27 @@
                     <li><a href="research.html#zebrafish">ゼブラフィッシュ視細胞サブタイプのネットワークの同定</a></li>
                 </ul>
             </div>
-    
+            <div lang="en">
+               <h2>Previous Research</h2>
+               <ul>
+                   <li><a href="research.html?lang=en#atac">Deep interspecies conservation of transcription factor motifs in retinal cell classes</a></li>
+                    <li><a href="research.html?lang=en#zebrafish">Identification of transcriptional network in zebrafish photoreceptors</a></li>
+                </ul>
+            </div>
+        
         <section id="publications">
             <div lang="ja">
                 <h2>業績（抜粋）</h2>
                 <ol>
                     <li style="margin-top: 10px;">
+                        <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, C. A. Myers, A. Morshedian, G. L. Fain, A. P. Sampath, J. C. Corbo, 
+                        <a href="https://doi.org/10.1126/sciadv.adw7681"> Conservation of cis-regulatory codes over half a billion years of evolution. </a> 
+                        <b><i>Sci. Adv.</i></b> 11, eadw7681 (2025).
+                    </li>
+                    <li style="margin-top: 10px;">
                         Y. Liu, E. C. Hurley, <span style="color: blue;"><b>Y. Ogawa</b></span>, M. Gause, M. B. Toomey, C. A. Myers, J. C. Corbo, 
                         <a href="https://doi.org/10.1016/j.cub.2025.02.040">Avian photoreceptor homologies and the origin of double cones.</a>
                         <i><b>Curr. Biol.</b></i> 35, 2215-2227.e6 (2025).
-                    </li>
-                    <li style="margin-top: 10px;">
-                        <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, C. A. Myers, A. Morshedian, G. L. Fain, A. P. Sampath, J. C. Corbo, 
-                        <a href="https://doi.org/10.1101/2024.11.13.623372"> Conservation of cis-regulatory codes over half a billion years of evolution. </a> 
-                        <b><i>bioRxiv</i></b> 2024.11.13.623372 (2024).
                     </li>
                     <li style="margin-top: 10px;">
                         R. Arbore, S. Barbosa, J. Brejcha, <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, M. P. J. Nicolaï, P. Pereira, S. J. Sabatino, A. Cloutier, E. S. K. Poon, C. I. Marques, P. Andrade, G. Debruyn, S. Afonso, R. Afonso, S. G. Roy, U. Abdu, R. J. Lopes, P. Mojzeš, P. Marík, S. Y. W. Sin, M. A. White, P. M. Araújo, J. C. Corbo, M. Carneiro, 
@@ -151,14 +158,14 @@
                 <h2>Selected Publications</h2>
                 <ol>
                     <li style="margin-top: 10px;">
+                        <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, C. A. Myers, A. Morshedian, G. L. Fain, A. P. Sampath, J. C. Corbo, 
+                        <a href="https://doi.org/10.1126/sciadv.adw7681"> Conservation of cis-regulatory codes over half a billion years of evolution. </a> 
+                        <b><i>Sci. Adv.</i></b> 11, eadw7681 (2025).
+                    </li>
+                    <li style="margin-top: 10px;">
                         Y. Liu, E. C. Hurley, <span style="color: blue;"><b>Y. Ogawa</b></span>, M. Gause, M. B. Toomey, C. A. Myers, J. C. Corbo, 
                         <a href="https://doi.org/10.1016/j.cub.2025.02.040">Avian photoreceptor homologies and the origin of double cones.</a>
                         <i><b>Curr. Biol.</b></i> 35, 2215-2227.e6 (2025).
-                    </li>
-                    <li style="margin-top: 10px;">
-                        <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, C. A. Myers, A. Morshedian, G. L. Fain, A. P. Sampath, J. C. Corbo, 
-                        <a href="https://doi.org/10.1101/2024.11.13.623372"> Conservation of cis-regulatory codes over half a billion years of evolution. </a> 
-                        <b><i>bioRxiv</i></b> 2024.11.13.623372 (2024).
                     </li>
                     <li style="margin-top: 10px;">
                         R. Arbore, S. Barbosa, J. Brejcha, <span style="color: blue;"><b>Y. Ogawa</b></span>, Y. Liu, M. P. J. Nicolaï, P. Pereira, S. J. Sabatino, A. Cloutier, E. S. K. Poon, C. I. Marques, P. Andrade, G. Debruyn, S. Afonso, R. Afonso, S. G. Roy, U. Abdu, R. J. Lopes, P. Mojzeš, P. Marík, S. Y. W. Sin, M. A. White, P. M. Araújo, J. C. Corbo, M. Carneiro, 
@@ -232,7 +239,11 @@
                 <h2>Career</h2>
                 <ul>
                     <li>
-                        2025 May-Present, <b>Postdoctoral Fellow</b><br>
+                        2025 Nov-Present, <b>Project Assistant Professor</b><br>
+                        National Institue of Genetics, Molecular Life History Laboratory, Mishima, Japan
+                    </li>
+                    <li style="margin-top: 0.5em;">
+                        2025 May-Oct, <b>Project Researcher</b><br>
                         National Institue of Genetics, Molecular Life History Laboratory, Mishima, Japan
                     </li>
                     <li style="margin-top: 0.5em;">
