--- a/futureresearch.html
+++ b/futureresearch.html
@@ -38,13 +38,13 @@
                 <li><a href="index.html#contact">連絡先</a></li>
             </div>
             <div lang="en">
-                <li><a href="index.html#overview">Yohei Ogawa</a></li>
-                <li><a href="index.html#current">Current Research</a></li>
-                <li><a href="research.html">Previous Research</a></li>
-                <li><a href="futureresearch.html">Future Research as Independent Researcher</a></li>
-                <li><a href="index.html#publications">Publications</a></li>
-                <li><a href="index.html#career">Career</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="index.html?lang=en#overview">Yohei Ogawa</a></li>
+                <li><a href="index.html?lang=en#current">Current Research</a></li>
+                <li><a href="research.html?lang=en">Previous Research</a></li>
+                <li><a href="futureresearch.html?lang=en">Future Research as Independent Researcher</a></li>
+                <li><a href="index.html?lang=en#publications">Publications</a></li>
+                <li><a href="index.html?lang=en#career">Career</a></li>
+                <li><a href="index.html?lang=en#contact">Contact</a></li>
             </div>
         </ul>
     </nav>
