--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#overview">Yohei Ogawa</a></li>
                 <li><a href="#current">Current Research</a></li>
                 <li><a href="research.html?lang=en">Previous Research</a></li>
-                <li><a href="futureresearch.html">Future Research as Independent Researcher</a></li>
+                <li><a href="futureresearch.html?lang=en">Future Research as Independent Researcher</a></li>
                 <li><a href="#publications">Publications</a></li>
                 <li><a href="#career">Career</a></li>
                 <li><a href="#contact">Contact</a></li>
