--- a/research.html
+++ b/research.html
@@ -39,13 +39,13 @@
                 <li><a href="index.html#contact">連絡先</a></li>
             </div>
             <div lang="en">
-                <li><a href="index.html#overview">Yohei Ogawa</a></li>
-                <li><a href="index.html#current">Current Research</a></li>
-                <li><a href="research.html">Previous Research</a></li>
-                <li><a href="futureresearch.html">Future Research as Independent Researcher</a></li>
-                <li><a href="index.html#publications">Publications</a></li>
-                <li><a href="index.html#career">Career</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="index.html?lang=en#overview">Yohei Ogawa</a></li>
+                <li><a href="index.html?lang=en#current">Current Research</a></li>
+                <li><a href="research.html?lang=en">Previous Research</a></li>
+                <li><a href="futureresearch.html?lang=en">Future Research as Independent Researcher</a></li>
+                <li><a href="index.html?lang=en#publications">Publications</a></li>
+                <li><a href="index.html?lang=en#career">Career</a></li>
+                <li><a href="index.html?lang=en#contact">Contact</a></li>
             </div>
         </ul>
     </nav>
@@ -60,7 +60,7 @@
         <section id="atac">
             <div lang="ja">
                 <h1>網膜神経細胞クラスそれぞれにおける転写因子モチーフの高い種間相同性</h1>
-                <h2 style="margin: 0%;"><a href="https://doi.org/10.1101/2024.11.13.623372"> Conservation of cis-regulatory codes over half a billion years of evolution. </a></h2>
+                <h2 style="margin: 0%;"><a href="https://doi.org/10.1126/sciadv.adw7681"> Conservation of cis-regulatory codes over half a billion years of evolution. </a></h2>
                 <h3>背景</h3>
                 <img src="./media_file/figures/Retina_phylogeny.png" alt="画像1" class="res11-image">
                 <p style="text-indent: 0em;margin-bottom: 0.8em; width: 70%; font-family: 'Times New Roman', Times, serif;">図１−１　脊椎動物の網膜（左）と種の系統樹（右）</p>
@@ -76,7 +76,7 @@
                 <p>当初の計画ですと、蛍光レポーターを視細胞サブタイプそれぞれに発現するトランスジェニックゼブラフィッシュと、蛍光セルソーターを組み合わせてゼブラフィッシュ視細胞サブタイプをそれぞれ分取した後に、バルクATAC-seqを行う予定でした。パイロット実験はそこそこ上手くいっていましたが、10xGenomicsのシングルセルATAC-seqが市販化され、より強力な後者の手法に完全に移行しました。シングルセルATAC-seqは、ゲノムの情報があれば、トランスジェニックラインを使用せずに１細胞レベルのオープンクロマチンを調べることができるため、私の目的とよく合致しました。</p>
             </div>
             <div lang="en" display: none;>
-                <h2 style="margin: 0%;"><a href="https://doi.org/10.1101/2024.11.13.623372"> Conservation of cis-regulatory codes over half a billion years of evolution. </a></h2>
+                <h2 style="margin: 0%;"><a href="https://doi.org/10.1126/sciadv.adw7681"> Conservation of cis-regulatory codes over half a billion years of evolution. </a></h2>
                 <h3>Background</h3>
                 <img src="./media_file/figures/Retina_phylogeny.png" alt="Image 1" class="res11-image">
                 <p style="text-indent: 0em;margin-bottom: 0.8em; width: 70%; font-family: 'Times New Roman', Times, serif;">Figure 1-1: Vertebrate retina (left) and phylogenetic tree of species (right)</p>
