--- a/futureresearch.html
+++ b/futureresearch.html
@@ -32,7 +32,7 @@
                 <li><a href="index.html#overview">小川洋平</a></li>
                 <li><a href="index.html#current">現在の研究</a></li>
                 <li><a href="research.html">これまでの研究成果</a></li>
-                <li><a href="futureresearch.html">独立してからの研究</a></li>
+                <li><a href="futureresearch.html">将来の研究</a></li>
                 <li><a href="index.html#publications">業績</a></li>
                 <li><a href="index.html#career">経歴・職歴</a></li>
                 <li><a href="index.html#contact">連絡先</a></li>
@@ -51,7 +51,7 @@
 
     <main>
         <div lang="ja">
-            <h1>独立してからの研究</h1>
+            <h1>将来の研究</h1>
         </div>
         <div lang="en">
             <h1>Future research as independent researcher</h1>
