--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#overview">小川洋平</a></li>
                 <li><a href="#current">現在の研究</a></li>
                 <li><a href="research.html">これまでの研究成果</a></li>
-                <li><a href="futureresearch.html">独立してからの研究</a></li>
+                <li><a href="futureresearch.html">将来の研究</a></li>
                 <li><a href="#publications">業績</a></li>
                 <li><a href="#career">経歴・職歴</a></li>
                 <li><a href="#contact">連絡先</a></li>
@@ -62,7 +62,7 @@
             <header>
                 <!-- プロフィール画像とタイトルを横並びに配置 -->
                 <div class="header-content">
-                    <img src="./media_file/photo/Yohei_Ogawa_cherry.jpeg" alt="プロフィール画像" class="profile-image">
+                    <img src="./media_file/photo/Yohei_Ogawa.jpeg" alt="プロフィール画像" class="profile-image">
                     <h1>小川 洋平 (Yohei Ogawa)</h1>
                 </div>
                 <!--<p class="sub-title">生物科学研究者</p>-->
@@ -74,8 +74,8 @@
             <div lang="ja">
                <h2>研究テーマ</h2>
                <ul>
-                    <li><b>トランスポゾンなどのリピート配列の同定とその種間比較</b></li>
-                    <li><b>シングルセルATAC-seqデータを用いた視細胞タイプの種間比較解析(Joseph Corbo博士との共同研究)</b></li>
+                    <li><b>トランスポゾンなどのリピート配列の同定とその種間比較 (工樂樹洋博士との共同研究)</b></li>
+                    <li><b>シングルセルATAC-seqデータを用いた視細胞タイプの種間比較解析 (Joseph Corbo博士との共同研究)</b></li>
                 </ul>
 
             </div>
